--- a/contact.html
+++ b/contact.html
@@ -16,9 +16,20 @@
   
   <!-- Map -->
   
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6606.2553719945445!2d-84.27566503156703!3d34.11748072284662!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f59df8996dd6ed%3A0x2d7dc345fb6c31c0!2sZaxby&#39;s+Chicken+Fingers+%26+Buffalo+Wings!5e0!3m2!1sen!2sus!4v1547438022909" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+ <iframe src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d26428.00251319954!2d-84.27957143755783!3d34.107939157789794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d34.1031846!2d-84.25736599999999!4m5!1s0x88f59df8996dd6ed%3A0x2d7dc345fb6c31c0!2sZaxby&#39;s+Chicken+Fingers+%26+Buffalo+Wings+13788+Georgia+9!3m2!1d34.115611!2d-84.26984999999999!5e0!3m2!1sen!2sus!4v1547438968157" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
   
   <!-- Contact Form-->
+  
+  <form action = "#" method ="post">
+    <label for="fullname">Name</label>
+    <input type="text" id="fullname" name="fullname" placeholder="your name" required>
+    <label for ="email">Email</label>
+    <input type="email" id="email" name="email" placeholder="your email" required>
+    <label for ="phone">Phone</label>
+    <input type="tel" id="phone" name="phone" placeholder="your phone (optional)">
+    <label for ="message">Message</label>
+    
+  </form>
   
 </body>
 </html>
