Automatically backed up by Learn

--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,7 @@
     <label for ="phone">Phone</label>
     <input type="tel" id="phone" name="phone" placeholder="your phone (optional)">
     <label for ="message">Message</label>
+    <textarea> </textarea>
     
   </form>
   
