--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     <label for ="phone">Phone</label>
     <input type="tel" id="phone" name="phone" placeholder="your phone (optional)">
     <label for ="message">Message</label>
-    <textarea> </textarea>
+    <textarea id="Message"> </textarea>
     
   </form>
   
