--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
     <input type="tel" id="phone" name="phone" placeholder="your phone (optional)">
     <label for ="message">Message</label>
     <textarea id="message" name="message" rows="10"> </textarea>
-    <label></label>
+    <input type="submit" >
     
   </form>
   
